Add styling for active filter

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
         <button class="clear-btn btn">Clear Completed</button>
       </div>
       <div class="filters">
-        <button class="filter-btn btn" data-filter="all">All</button>
+        <button class="filter-btn btn active" data-filter="all">All</button>
         <button class="filter-btn btn" data-filter="active">Active</button>
         <button class="filter-btn btn" data-filter="completed">Completed</button>
       </div>
